Gnome: Fix low text contrast in calendar events widget

--- a/gtk-3.20/apps/_gnome.scss
+++ b/gtk-3.20/apps/_gnome.scss
@@ -161,3 +161,13 @@
     &:hover { border-color: $selected_bg_color; }
   } 
 }
+
+/*******************
+ * Calendar events *
+********************/
+.color-light{
+  & label, &.timed label {
+    color: $bg_color;
+    opacity:1;
+  }
+}
